# Twitter-Hate-Speech

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: poc_data_classes.ipynb  poc_tweets_annotation.ipynb  poc_tweets_aquistion.ipynb  poc_tweets_normalization.ipynb
src/: main.py
src/modules/: database.py  engineering.py  getconfig.py  whistle.py
