[tool.poetry]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["FelipeOliveira <fp.ramos.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
python-dotenv = "^0.20.0"
pymongo = "^4.2.0"
tweepy = "^4.10.0"
jupyter = "^1.0.0"
pre-commit = "^2.20.0"
black = "^22.6.0"
nodejs = "^0.1.1"
jupyterlab = "^3.4.5"
ipywidgets = "^7.7.1"
pigeonXT-jupyter = "^0.6.1"
cleantext = "^1.1.4"
clean-text = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
